<resources>
    <string name="app_name">CampusHub</string>

    <string name="share">Share</string>
    <string name="list_title">The Big Mother Hen</string>
    <string name="appbar_title">%1$s</string>
    <string name="preferences_filename">com.monstercode.campushub.MyPreferences</string>
    <string name="item_list_title">Items</string>
    <string name="order_list_title">Orders</string>
    <string name="item_price">%1$d UGX</string>
    <string name="new_item_title">New</string>
    <string name="delete">Delete</string>
    <string name="name_title">Name</string>
    <string name="price_title">Price</string>
    <string name="new_picture">New Picture</string>
    <string name="label_submit">UPDATE</string>
    <string name="price_label">Price</string>
    <string name="update_hint">Update</string>
    <string name="name_label">Name</string>
    <string name="edit">Edit</string>
    <string name="label_delete_yes">YES</string>
    <string name="label_delete_no">CANCEL</string>
    <string name="delete_title">Are you sure you want to delete?</string>
</resources>
