<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_normal">

        <TextView
            android:id="@+id/delete_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_normal"
            android:text="@string/delete_title"
            android:textColor="@android:color/black" />


        <Button
            android:id="@+id/btn_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/delete_message"
            android:layout_alignParentEnd="true"
            android:background="@null"
            android:text="@string/label_delete_yes"
            android:textColor="@color/colorPrimaryDark"
            app:addClickAnimation="@{ true }" />

        <Button
            android:id="@+id/btn_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/delete_message"
            android:layout_toStartOf="@+id/btn_yes"
            android:background="@null"
            android:text="@string/label_delete_no"
            android:textColor="@color/colorPrimaryDark"
            app:addClickAnimation="@{ true }" />

    </RelativeLayout>
</layout>